<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"
        android:id="@+id/guideline01"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        android:id="@+id/guideline02"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        android:id="@+id/guideline03"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"
        android:id="@+id/guideline04"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2"
        android:id="@+id/guideline05"
        />
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"
        android:id="@+id/guideline06"
        />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/ic_launcher"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline01"
        app:layout_constraintBottom_toBottomOf="@id/guideline02"
        app:layout_constraintStart_toStartOf="@id/guideline05"
        app:layout_constraintEnd_toEndOf="@id/guideline06"
        android:hint="@string/userName"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline02"
        app:layout_constraintBottom_toBottomOf="@id/guideline03"
        app:layout_constraintStart_toStartOf="@id/guideline05"
        app:layout_constraintEnd_toEndOf="@id/guideline06"
        android:hint="@string/pass"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/guideline03"
        app:layout_constraintBottom_toBottomOf="@id/guideline04"
        app:layout_constraintStart_toStartOf="@id/guideline05"
        app:layout_constraintEnd_toEndOf="@id/guideline06"
        android:text="@string/login"
        android:textSize="20sp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>